# soft-continuum-vlm

./: .gitignore  AGENTS.md  CURRENT_STEP.md  PLANS.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md  todolist.md
data/: README.md
experiments/: README.md  exp_001_minimal_env_check.md  exp_002_scripted_demo_collection.md  exp_003_adapter_training.md  exp_004_vlm_planner_debug.md  exp_005_baseline_evaluation.md  exp_006_real_feagine_scene_inspection.md  exp_007_task_phase_expert.md  exp_008_pcc_ik_controller.md  exp_009_adapter_training_real_data.md  exp_010_policy_evaluation.md  exp_011_paper_figures.md
outputs/: README.md
scripts/: __init__.py  calibrate_section_jacobian.py  collect_scripted_demos.py  control_feagine_panel_ui.py  control_feagine_tabletop_panel_ui.py  control_feagine_ui.py  diagnose_feagine_runtime.py  diagnose_tabletop_contacts.py  evaluate_adapter.py  evaluate_baselines.py  evaluate_policies.py  export_paper_figures.py  generate_feagine_tabletop_scene.py  inspect_feagine_scene.py  inspect_mujoco_model_names.py  inspect_tabletop_scene_state.py  run_demo_env.py  run_feagine_control_panel.py  run_feagine_env_robot_state_smoke.py  run_feagine_metaworld_reach.py  run_pcc_ik_closed_loop_smoke.py  run_pcc_ik_controller_smoke.py  run_pick_expert_smoke.py  run_reachable_red_pick_attempt.py  run_reachable_red_pick_hold_retract.py  run_reachable_red_pick_retract_lift.py  run_task_phase_expert.py  run_vlm_planner_demo.py  scan_feagine_reachability.py  scan_grasper_red_contact.py  scan_grasper_red_contact_local.py  setup_feagine_env.sh  (+13 more)
(+170 files in other folders)
