[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-continuum-vlm"
version = "0.1.0"
description = "Embodiment-aware vision-language manipulation scaffold for contact-safe soft continuum arms."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "pytest>=7.0",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
